css/global.css
:root {
    --light-text: #eeeeee;
    --dark-text: #0c0e0f;

    --select-blue: #2a72dc;
    --danger-red: #e01f15;

    --drag-bar: var(--select-blue);
    --drag-background: var(--gray);

    --background: #070a0e;
    --dark-gray: #0a1015;
    --gray: #10151a;
    --light-gray: #1e2831;
    --lighter-gray: #222c37;

    --accent-1: #cadda0;
}
@font-face {
    font-family: "Kadwa";
    src: url(/css/fonts/Kadwa/Kadwa-Regular.ttf);
}
@font-face {
    font-family: "Karla";
    src: url(/css/fonts/Karla/Karla-VariableFont_wght.ttf);
}
/* @font-face {
    font-family: 'Material Symbols Outlined';
    src: url(/css/fonts/MaterialSymbolsOutlined.woff2);
}
.material-symbols-outlined {
    font-family: 'Material Symbols Outlined';
    font-weight: normal;
    font-size: 24px;
    display: block;
    line-height: 1;
    text-transform: none;
    letter-spacing: normal;
    word-wrap: normal;
    white-space: nowrap;
    direction: ltr;
} */
* {
    color: var(--light-text);
    font-family: "Kadwa", "Karla", sans-serif;
    padding: 0;
    margin: 0;
}
h1 {
    font-weight: normal;
    font-size: 56pt;
    letter-spacing: -0.03em;
    font-family: karla;
}
h1 > * {
    font-family: karla;
}
h2 {
    font-weight: normal;
    font-size: 24pt;
    letter-spacing: 0;
    font-family: karla;
}
h2 > * {
    font-family: karla;
}
h3 {
    font-family: "Kadwa";
    font-weight: normal;
}
p,
span {
    font-size: 12pt;
    letter-spacing: 40;
    font-family: kadwa;
}
p > * {
    font-family: kadwa;
}
body {
    background: var(--background);
}
body,
.container {
    overflow-x: hidden;
    overflow-y: visible;
    scrollbar-width: thin;
}
.quick-container {
    position: absolute;
    width: 100%;
    height: calc(100% - 30px);
    top: 60px;
    background: rgb(17,26,35);
}
.status {
    margin: 10px;
    padding: 10px;
    width: calc(100% - 40px);
    background-color: rgb(50, 50, 50);
}
button {
    border-radius: 5px;
    border: none;
    background-color: var(--accent-1);
    color: var(--dark-text);
    cursor: pointer;
    transition: 0.3s;
    padding: 0px 5px;
    font-size: 12pt;
}
button:hover {
    filter: brightness(85%);
}
button:disabled {
    cursor: initial;
    filter: brightness(75%);
    color: var(--dark-text);
}
input,
div[contenteditable="true"] {
    border: none;
    border-radius: 5px;
    color: #eeeeee;
    background-color: var(--lighter-gray);
    transition: 0.3s;
    padding: 0px 5px;
    font-size: 12pt;
    box-sizing: border-box;
}
input:hover,
div[contenteditable="true"]:hover {
    filter: brightness(115%);
}
div[contenteditable="true"][placeholder]:empty:before {
    content: attr(placeholder);
    opacity: 0.4;
    color: var(--accent-1);
}
::placeholder {
    opacity: 0.4;
    color: var(--accent-1);
}
div[contenteditable="true"] {
    padding: 5px;
}
textarea {
    border: none;
    border-radius: 5px;
    padding: 5px;
    background-color: var(--gray);
    color: var(--light-text);
    width: calc(100% - 30px);
    margin: 0px auto;
    height: 30dvh;
    resize: none;
}
select {
    border: none;
    border-radius: 5px;
    padding: 5px;
    background-color: var(--lighter-gray);
    color: var(--light-text);
    width: 200px;
}
code {
    background-color: var(--gray);
    color: var(--accent-1);
    padding: 5px;
    border-radius: 5px;
}
select, option {
    cursor: pointer;
}
.loader {
    margin: 0;
    padding: 0;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: var(--background);
    z-index: 500;
}
.load-rot {
    position: absolute;
    top: 50%;
    left: 50%;
    margin: -100px;
    width: 200px;
    height: 200px;
    border: solid transparent 10px;
    border-top: solid white 10px;
    border-bottom: solid white 10px;
    border-radius: 50%;
    animation: spin 2s linear infinite;
    z-index: 500;
}
.loader .tips {
    position: absolute;
    top: 70%;
    font-family: karla;
    font-style: italic;
    color: rgb(150, 150, 150);
    left: 0;
    width: 100%;
    text-align: center;
}
.prev-tip,
.new-tip {
    width: 100%;
    height: 100%;
    font-family: karla;
    font-style: italic;
    color: rgb(150, 150, 150);
    text-align: center;
}
.prev-tip {
    opacity: 100%;
    animation: t_fadeout 0.5s ease forwards;
}
.new-tip {
    opacity: 0;
    animation: t_fadein 0.5s ease forwards;
}
.header {
    height: 63px;
    overflow: hidden;
    background-color: var(--gray);
    padding: 0 5px;
    border-radius: 0 0 10px 10px;
    position: relative;
    z-index: 10;
}
[id="header:beta-text"] {
    transition: 0s;
}
.header > * {
    padding-top: 12px;
    z-index: 10;
}
.header span,
.pfp {
    float: left;
    font-weight: bold;
    cursor: pointer;
    line-height: 25px;
    padding: 8px 5px;
}
.pfp {
    height: 41px;
    width: 41px;
    border-radius: 50%;
    padding-top: 0px;
    padding-bottom: 0px;
}
.material-symbols-outlined {
    user-select: none;
    -webkit-user-select: none;
    font-size: 38px;
    font-variation-settings:
        "FILL" 0,
        "wght" 400,
        "GRAD" 200,
        "opsz" 48;
}
.small-ico {
    font-size: 11px;
}
.header > span.info {
    position: absolute;
    left: 157px;
    top: 18px;
    font-family: karla;
    font-size: 15px;
}
.header > span.info:hover {
    color: white;
}
.header span {
    transition: 0.3s;
    transition-timing-function: ease-in-out;
}
.header span:hover {
    color: var(--accent-1);
}
.logo {
    cursor: pointer;
    transition: 0.3s;
}
.logo:hover {
    filter: brightness(85%);
}
.right-header {
    float: right;
}
.left-header {
    float: left;
}
.info-blank {
    color: color-mix(in srgb, var(--light-text) 90%, black 10%);
    font-style: italic;
    font-family: karla;
    text-align: center;
    width: 100%;
}
.info-error {
    margin-top: 5px;
    color: var(--danger-red);
    font-family: karla;
}
.info-success {
    margin-top: 5px;
    color: var(--select-blue);
    font-family: karla;
}
.error-popup {
    position: fixed;
    top: 20px;
    left: 50%;
    transform: translateX(-50%);
    background-color: rgba(255, 0, 0, 0.8);
    color: white;
    padding: 10px 20px;
    border-radius: 5px;
    z-index: 1000;
    animation: error_show 2.5s ease forwards;
}
.switch {
    margin-top: 10px;
    position: relative;
    display: inline-block;
    width: 50px;
    height: 24px;
}
.switch input {
    opacity: 0;
    width: 0;
    height: 0;
}
.slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: var(--dark-gray);
    transition: 0.4s;
    border-radius: 34px;
}
.slider:before {
    position: absolute;
    content: "";
    height: 17px;
    width: 17px;
    left: 5px;
    bottom: 4px;
    background-color: var(--light-gray);
    transition: 0.35s;
    border-radius: 50%;
}
input[type="checkbox"]:checked + .slider {
    background-color: var(--accent-1);
}
input:checked + .slider:before {
    -webkit-transform: translateX(24px);
    -ms-transform: translateX(24px);
    transform: translateX(24px);
}
.global-headers dialog,
.header-dialog {
    margin: auto;
    padding: 30px;
    border: none;
    border-radius: 15px;
    width: clamp(80px, 450px, 450px);
    background-color: var(--dark-gray);
    h2 {
        display: inline;
    }
    ul {
        padding: 0px 10px;
        margin: 0px 10px;
    }
    button {
        font-size: 12pt;
        height: 30px;
        width: auto;
        padding: 0px 5px;
        margin: 0px 5px;
    }
}
dialog::backdrop {
    background-color: rgba(0, 0, 0, 0.9);
}
.deck-divider {
    background-color: var(--light-gray);
    height: 5px;
    margin: 40px 15px;
    border-radius: 5px;
}
.line-up-icons {
    display: flex;
    align-items: center;
}
.line-up-icons span {
    margin-left: 5px;
}
.header-dialog {
    margin: 45px auto;
    min-width: 50%;
    & textarea {
        margin-top: 5px;
    }
    & button {
        margin: 0px;
        margin-top: 10px;
        border-radius: 5px;
        padding: 0px 5px;
        min-width: 62px;
        min-height: 38px;
    }
}
.login-box-selector {
    float: right;
    color: var(--accent-1);
    transition: 0.3s;
}
.login-box-selector:hover {
    filter: brightness(85%);
    cursor: pointer;
}
#too-big-img {
    display: none;
    height: 100vh;
    width: 100vw;
    position: fixed;
    z-index: 1000;
}
.verify-email-alert {
    display: none;
    color: rgba(200, 100, 100);
    margin: 0px 10px 0px 0px;
}
.feedback-submit-button {
    margin-top: 10px !important;
    margin-left: 0px !important;
}
.drag-line {
    display: flex; 
    background-color: var(--drag-bar); 
    width: 100%; 
    height: 5px;
}
@media only screen and (min-width: 9999px) {
    #too-big-img {
        background-image: url(/img/menhera-sad.gif);
        display: block;
    }
}
@keyframes t_fadeout {
    0% {
        opacity: 100%;
        transform: translateY(0);
    }
    100% {
        opacity: 0;
        transform: translateY(-100%);
    }
}
@keyframes t_fadein {
    0% {
        opacity: 0;
        transform: translateY(100%);
    }
    100% {
        opacity: 100%;
        transform: translateY(0);
    }
}
@keyframes spin {
    100% {
        transform: rotate(360deg);
    }
}
/* error_show - initially, position is at -10%. Then it moves it to 20% using ease, and then
    2 seconds later moves it from 20% to -10% using ease.
*/
@keyframes error_show {
    0% {
        top: -80px;
    }
    30% {
        top: 20px;
    }
    70% {
        top: 20px;
    }
    100% {
        top: -80px;
    }
}

